add types to req and res

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -b && node dist/index.js",
-    "dev": "tsc -b && node dist/index.js"
+    "build": "tsc -b",
+    "start": "npm run build && node dist/index.js",
+    "dev": "npm run build && node dist/index.js"
   },
   "repository": {
     "type": "git",
